src/index.css
body {
  margin: 0;
  background-color: #282d35;
}

li {
  list-style: none;
}

p, h1 {
  color: antiquewhite;
}

/* Title, and nav */
.navbar {
  background-color: #282d35;
  position: fixed;
  top: 0;
  padding-top: 30px;
  display: flex;
  width: 100%;
  justify-content: center;
}

.menu-logo {
  display: none;
}

.my-logo {
  width: 5%;
  position: absolute;
  left: 6%;
  top: 20%;
}

.nav ul{
  display: flex;
  justify-content: center;
  flex-direction: row;
  background-color: #282d35;
} 

.nav li {
  padding: 5px 80px;
  list-style: none;
  font-size: 20px;
}

.nav a {
  color: antiquewhite;
  text-decoration: none;
  cursor: pointer;
}

/* Intro and Image */
.intro{
  margin-top: 10%;
  text-align: center;
  justify-content: space-between;
  padding: 10px 40px;
  color: antiquewhite;
  padding-bottom: 20%;
  
}

.name, span{
  color: aquamarine;
}
.name-title{
  font-size: 30px;
}

.resume-button{
  background-color: #2b3f5e;
  color: antiquewhite;
  font-size: 15px;
  cursor: pointer;
}



/* Skills */
.skills {
  margin-top: 10%;
  margin-bottom: 30%;
}
.skills-title {
  color: antiquewhite;
  text-align: center;
}

.seperate-tech {
  display: flex;
  color: antiquewhite;
  justify-content: center;
  gap: 20px;
}

.front-end, .back-end, .tools{
  border-radius: 10px;
  padding: 2px 10px;
}
.front-end-title, .back-end-title, .tools-title {
  text-align: center;
}

.front-end-list, .back-end-list, .tools-list{
  display: flex;
  width: 100%;
  padding: 0px 10px;
}


.front-end-list li, .back-end-list li, .tools-list li{
  padding-right: 40px;
}

.tools {
  padding-left: 40px;
}

/* Project */
.projects{
  margin-top: 90px;
  margin-bottom: 30%;
}

.projects-title{
  text-align: center;
  color: antiquewhite;
}

.project-cards{
  display: flex;
  justify-content: center;
  gap: 50px;
}

.soccer-project, .guess-number {
  width: 350px;
  height: 450px;
}

.tech-tags {
  display: flex; 
  gap: 10px;
  padding: 0 10px;
  justify-content: center;
}

.tech-tags p {
  background-color: #7fffd4;
  color: #2b3f5e;
  font-weight: 700;
  border-radius: 4px;
  padding: 5px 5px;
  font-size: 15px;
}

.description {
  padding: 0 10px;
}

.buttons {
  padding:8px 20px;
  border-radius: 5px;
  background-color: #7fffd4;
  color: #282d35;
  font-weight: 700;
  margin: 0 25px;
  cursor: pointer;
}

.project-cards img {
  height: 50%;
  width: 100%;
}

/* About */
.about {
  margin-bottom: 20%;
}

.about img {
  width: 80px;
}

.about p {
  color: antiquewhite;
  font-size: 22px;
}

.about-title {
  color:antiquewhite;
  text-align: center;
}

.about-collums {
  display: flex;
  margin: 0 20%;
}

.contact-info{
  padding: 0 50px;
  margin: auto;
}

.contact-info {
  display: flex; 
  flex-direction: column;
  width: 550px;
  height: 300px;
}

.bio-text {
  width: 800px;
  height: 300px;
  font-size: 23;
}

#lets-connect {
  font-size: 30px;
  font-weight: 600;
}

#lets-connect, #email {
  text-align: center;
}

#links {
  margin: auto;
}
/* Footer */
.footer {
  display: flex;
  justify-content: center;
  background-color: #282d35;
  color: aquamarine;
  font-size: 18px;
  padding-bottom: 20px;
}

@media screen and (max-width: 600px){
  .intro{
    margin-top: 20%;
    margin-bottom: 5%;
  }
  .seperate-tech {
    display: flex;
    flex-direction: column;
    justify-content: center;
    color: antiquewhite;
  }

  .skills-title{
    font-size: 13px;
  }

  .front-end, .back-end, .tools {
    background-color: #2b3f5e;
    border-radius: 10px;
    margin: auto;
    width: 50%;
    padding: 0 10px;
    font-size: 10px;
  }

  .front-end-list,  .back-end-list, .tools-list{
    justify-content: center;
  }

  .front-end-title, .back-end-title, .tools-title {
    text-align: center;
  }

  .tools{
    margin-top: 10px;
  }

  .back-end {
    margin-top: 10px;
  }

  .projects-title, #lets-connect, .about-title {
    font-size: 25px;
  }

  .project-cards {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .soccer-project, .guess-number {
    width: 250px;
    height: 350px;
  }

  .guess-number{
    margin-top: 22%;
  }
  .tech-tags p {
    background-color: #7fffd4;
    color: #2b3f5e;
    font-weight: 700;
    border-radius: 4px;
    padding: 5px 5px;
    font-size: 10px;
  }

  .buttons{
    padding:8px 8px;
    border-radius: 5px;
    background-color: aquamarine;
    color: #282d35;
    font-weight: 700;
    margin: 0 18px;
    cursor: pointer;
  }

  #button{
    padding:8px 8px;
    border-radius: 5px;
    background-color: aquamarine;
    /* color: #282d35; */
    font-weight: 700;
    margin: 0 10px;
    cursor: pointer;
  }

  .bio-text {
    width: 200px;
    height: 100px;
    margin-bottom: 70%;
  }

  .bio-text p{
    font-size: 18px;
  }

  #email {
    font-size: 14px;
    font-weight: 600;
  }

  .contact-info {
    display: flex; 
    flex-direction: column;
    width: 200px;
    height: 100px;
    margin-bottom: 10%;
    margin-top: 60%;

  }
  .about-collums{
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
  }

  .my-logo {
    width: 15%;
    top: 23%;
    left: 5px;
  }

  .nav ul li {
    font-size: 20px;
    padding: 5px 30px;    
  }

.nav ul{
    display: flex;
  }

  /* .my-logo {
    display: block;
    width: 55px;
    position: absolute;
    top: 20px;
    left: 50%;
  } */

  /* .menu-logo {
    display: block;
    width: 30px;
    position: absolute;
    right: 35px;

  }

  .menu-items {
    background: #7fffd4;
    position: fixed;
    top: 0;
    right: -300px;
    width: 200px;
    height: 100vh;
    align-items: center;
  }

  .menu-items li {
    display: block;
    margin: 25px;

  } */


}

@media screen and (max-width: 500px){
  .my-logo {
    top: 30%;
  }
  .nav ul li {
    font-size: 20px;
    padding: 5px 18px;    
  }

.nav ul{
    display: flex;
  }
}

.projects {
  margin-bottom: 60%;
}

.bio-text {
  padding-bottom: 80%;
}

.contact-info {
  justify-content: center;
}

